# create-agent-app

./: .env.example  .gitignore  Makefile  README.md  create-agent-app.code-workspace  pyproject.toml
agno_example/: customer_support_agent.py  pyproject.toml
agno_example/tests/: test_customer_support_agent.py
autogen_example/: customer_support_agent.py  pyproject.toml
ax_example/: .env.example  package-lock.json  package.json  tsconfig.json
ax_example/src/: CustomerSupportAgent.test.ts  CustomerSupportAgent.ts  customer-support-agent.test.ts
cloudflare_worker_example_no_dependencies/: README.md  index.js  wrangler.toml
cloudflare_worker_example_no_dependencies/knowledge_base/: index.html
create_agent_app/: esbuild.config.js  index.ts  package-lock.json  package.json  tsconfig.json
create_agent_app/common/customer_support/: mocked_apis.ts
create_agent_app/common/cutomer_support/: mocked_apis.py
create_agent_app/common/vibe_coding/: utils.py
crewai_example/: customer_support_crew.py  pyproject.toml
crewai_example/tests/: test_customer_support_crew.py
dspy_example/: customer_support_agent.py  pyproject.toml
dspy_example/tests/: test_customer_support_agent.py
google_adk_example/: customer_support_agent.py  pyproject.toml
google_adk_example/tests/: test_customer_support_agent.py
inngest_agent_kit_example/: package-lock.json  package.json  server.ts  tsconfig.json
inngest_agent_kit_example/agents/: customer-support-agent.test.ts  customer-support-agent.ts
inspect_ai_example/: customer_support_agent.py  pyproject.toml
inspect_ai_example/tests/: test_customer_support_agent.py
instructor_example/: customer_support_agent.py  pyproject.toml
instructor_example/tests/: test_customer_support_agent.py
langgraph_functional_api/: customer_support_agent.py  pyproject.toml
langgraph_functional_api/tests/: test_customer_support_agent.py
langgraph_functional_api_example/: customer_support_agent.py  pyproject.toml
langgraph_functional_api_example/tests/: test_customer_support_agent.py
langgraph_highlevel_api/: customer_support_agent.py  pyproject.toml
langgraph_highlevel_api/tests/: test_customer_support_agent.py
langgraph_highlevel_api_example/: customer_support_agent.py  pyproject.toml
langgraph_highlevel_api_example/tests/: test_customer_support_agent.py
langgraph_js_example/: .gitignore  langgraph.json  package-lock.json  package.json  vite.config.ts
langgraph_js_example/agents/: customer-support-agent.test.ts  customer-support-agent.ts
langgraph_js_example/src/: App.tsx
letta_example/: README.md  customer_support_agent.py  requirements.txt  run.sh
llama_index_example/: customer_support_agent.py  pyproject.toml
llama_index_example/tests/: test_customer_support_agent.py
mastra_example/: .gitignore  package-lock.json  package.json  tsconfig.json
mastra_example/mastra/: index.ts
mastra_example/mastra/agents/: customer-support-agent.test.ts  customer-support-agent.ts  prompts.ts  weather-agent.ts
mastra_example/src/: App.tsx  main.tsx
no_framework_example/: customer_support_agent.py  pyproject.toml
pixelagent_example/: customer_support_agent.py  pyproject.toml
pixelagent_example/tests/: test_customer_support_agent.py
promptflow_example/: customer_support_agent.py  pyproject.toml  test_agent.py
promptflow_example/tests/: test_customer_support_agent.py
pydantic_ai_example/: customer_support_agent.py  pyproject.toml  vibe_coding_agent.py
pydantic_ai_example/tests/: test_customer_support_agent.py  test_vibe_coding_agent.py
smolagents_example/: customer_support_agent.py
smolagents_example/tests/: test_customer_support_agent.py
strand_example/: customer_support_agent.py  pyproject.toml
strand_example/tests/: test_customer_support_agent.py
(+3 files in other folders)
