[project]
name = "create-agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
packages = ["create_agent_app"]

[tool.uv.workspace]
members = [
  "langgraph_functional_api_example",
  "langgraph_highlevel_api_example",
  "pydantic_ai_example",
  "google_adk_example",
]
