[project]
name = "agno-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.6.0",
    "create-agent-app",
    "google-genai>=1.11.0",
    "langwatch>=0.2.3",
    "langwatch-scenario>=0.1.3",
    "openinference-instrumentation-agno>=0.1.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
create-agent-app = { path = "../", editable = true }
