[project]
name = "autogen-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "create-agent-app",
    "autogen-agentchat>=0.7.0",
    "langwatch>=0.2.9",
    "langwatch-scenario>=0.1.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    # TODO: Add when available: "openinference-instrumentation-autogen>=0.1.0"
]

[tool.uv.sources]
create-agent-app = { path = "../", editable = true } 