[project]
name = "instructor-example"
version = "0.1.0"
description = "Customer support agent using Instructor with Langfuse integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "create-agent-app",
    "instructor>=1.0.0",
    "langwatch>=0.2.9",
    "langwatch-scenario>=0.1.3",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
create-agent-app = { path = "../", editable = true } 